# electronics_network

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
electronics/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
electronics/migrations/: 0001_initial.py  0002_alter_contact_options_alter_product_options_and_more.py
electronics/templates/: api_root.html
electronics_network/: asgi.py  settings.py  urls.py  wsgi.py
